--- a/src/scss/base/vars.scss
+++ b/src/scss/base/vars.scss
@@ -2,5 +2,5 @@
     --blue: #152A60;
     --lightBlue: rgba(21, 42, 96, 0.6);
     --grey: rgba(239, 239, 239, 1);
-    
+     --darkGrey: rgba(255, 255, 255, 0.6);
 }
