--- a/src/scss/components/UI/_btn.scss
+++ b/src/scss/components/UI/_btn.scss
@@ -6,9 +6,21 @@
     border-radius: 24px;
     width: max-content;
     height: max-content;
+    transition: .5s;
     &_blue{
         background-color: var(--blue);
         color: #fff;
-
+        &:hover{
+            background-color:#fff;
+            color: var(--blue);
+        }
+    }
+    &_white{
+        background-color:#fff;
+        color: var(--blue);
+        &:hover{
+            background-color: var(--blue);
+        color: #fff;
+        }
     }
 }
