--- a/src/scss/components/UI/_input.scss
+++ b/src/scss/components/UI/_input.scss
@@ -1,38 +1,39 @@
-.custom-input {
+.road-map__form-inputs{
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+.input-custom {
+	color: var(--grey);
+	background-color: transparent;
+	border: 1px solid var(--grey);
+	padding: 12px 20px;
+	font-size: 20px;
+	border-radius: 24px;
+	transition: .5s;
+	width: 100%;
+	&:focus{
+		color: #fff;
+		border: 1px solid #fff;
+	}
+	&.error{
+		border: 1px solid rgba(230, 26, 26, 1);
+	}
+}
+.input-container{
 	position: relative;
-	input {
+	svg{
+		
+		position: absolute;
+		top: 18px;
+		right: 18px;
+		cursor: pointer;
 		opacity: 0;
 		visibility: hidden;
-        &:checked + label::after{
-            opacity: 1;
-        }
-        &:checked + label::before{
-            box-shadow: 0px 0px 8px #5faaff;
-        }
+		transition: .5s;
 	}
-	label {
-		padding: 0 0 0 15px;
-		&::before {
-			content: ' ';
-			position: absolute;
-			top: 5px;
-			left: 0;
-			width: 16px;
-			height: 16px;
-			border: 1px solid #5faaff;
-			border-radius: 50%;
-		}
-		&::after {
-			content: ' ';
-			position: absolute;
-			top: 9px;
-			left: 4px;
-			width: 10px;
-			height: 10px;
-			background-color: #5faaff;
-			border-radius: 50%;
-            opacity: 0;
-            transition: .5s;
-		}
+	.input-custom.error + svg{
+		opacity: 1;
+		visibility: visible;
 	}
 }
