--- a/src/html/components/_reviews.html
+++ b/src/html/components/_reviews.html
@@ -1,4 +1,4 @@
-<div class="reviews">
+<div id="reviews" class="reviews">
 	<div class="container">
 		<div class="reviews__wrapper">
 			<h2 class="reviews__title title">Клиенты о нас</h2>
@@ -14,7 +14,7 @@
 									<a
 										data-fancybox
 										data-src="#ifame-1"
-										class="review__card-head-svg"
+										class="reviews__card-head-svg"
 									>
 										<svg
 											width="48"
@@ -70,7 +70,7 @@
 									<a
 										data-fancybox
 										data-src="#ifame-1"
-										class="review__card-head-svg"
+										class="reviews__card-head-svg"
 									>
 										<svg
 											width="48"
@@ -126,7 +126,7 @@
 									<a
 										data-fancybox
 										data-src="#ifame-1"
-										class="review__card-head-svg"
+										class="reviews__card-head-svg"
 									>
 										<svg
 											width="48"
@@ -182,7 +182,7 @@
 									<a
 										data-fancybox
 										data-src="#ifame-1"
-										class="review__card-head-svg"
+										class="reviews__card-head-svg"
 									>
 										<svg
 											width="48"
@@ -238,7 +238,7 @@
 									<a
 										data-fancybox
 										data-src="#ifame-1"
-										class="review__card-head-svg"
+										class="reviews__card-head-svg"
 									>
 										<svg
 											width="48"
@@ -294,7 +294,7 @@
 									<a
 										data-fancybox
 										data-src="#ifame-1"
-										class="review__card-head-svg"
+										class="reviews__card-head-svg"
 									>
 										<svg
 											width="48"
@@ -350,7 +350,7 @@
 									<a
 										data-fancybox
 										data-src="#ifame-1"
-										class="review__card-head-svg"
+										class="reviews__card-head-svg"
 									>
 										<svg
 											width="48"
