--- a/src/html/components/_roadMap.html
+++ b/src/html/components/_roadMap.html
@@ -1,4 +1,4 @@
-<div class="road-map">
+<div id="road-map" class="road-map">
 	<div class="container">
 		<div class="road-map-wrapper">
 			<div class="road-map__form-container">
@@ -13,10 +13,11 @@
 								type="text"
 								name=""
 								id=""
-								class="input-custom"
+								class="input-custom input-custom_transparent"
 								placeholder="Имя"
 							/>
-							<svg
+							<div class="btn-remove-text">
+<svg
 								width="14"
 								height="14"
 								viewBox="0 0 14 14"
@@ -30,16 +31,18 @@
 									stroke-linejoin="round"
 								/>
 							</svg>
+							</div>
 						</div>
 						<div class="input-container">
 							<input
-								type="text"
+								type="tel"
 								name=""
 								id=""
-								class="input-custom"
+								class="input-custom input-custom_transparent"
 								placeholder="Номер телефона"
 							/>
-							<svg
+							<div class="btn-remove-text">
+<svg
 								width="14"
 								height="14"
 								viewBox="0 0 14 14"
@@ -53,6 +56,8 @@
 									stroke-linejoin="round"
 								/>
 							</svg>
+							</div>
+							
 						</div>
 					</div>
 					<div class="btn-container">
