--- a/src/scss/base/basic.scss
+++ b/src/scss/base/basic.scss
@@ -27,7 +27,7 @@ html {
 
 main {
 	flex: 1 1 auto;
-	padding: 0 0 44px 0;
+	padding: 109px 0 44px 0;
 	display: flex;
 	flex-direction: column;
 	gap: 72px;
