--- a/src/scss/components/UI/_checkbox.scss
+++ b/src/scss/components/UI/_checkbox.scss
@@ -5,6 +5,7 @@
     label{
         padding: 0 0 0 36px;
         display: flex;
+        cursor: pointer;
     }
     .custom-checkbox{
         opacity: 0;
@@ -27,9 +28,16 @@
             background-position: center;
             position: absolute;
             top: 6px;
-    left: 6px;
-    width: 12px;
-    height: 13px;
+            opacity: 0;
+            visibility: hidden;
+            left: 6px;
+            width: 12px;
+            height: 13px;
+            transition: .5s;
+        }
+        &:checked + ::after{
+            opacity: 1;
+            visibility: visible;
         }
     }
 }
