--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,8 @@
 @import 'components/blocks/mainSlider';
 @import 'components/blocks/roadMap';
 @import 'components/blocks/reviews';
+@import 'components/blocks/callback';
+@import 'components/blocks/services';
 
 @import 'pages/index.scss';
 
