--- a/src/scss/components/UI/_input.scss
+++ b/src/scss/components/UI/_input.scss
@@ -1,39 +1,74 @@
-.road-map__form-inputs{
+.road-map__form-inputs {
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
 }
 .input-custom {
 	color: var(--grey);
-	background-color: transparent;
-	border: 1px solid var(--grey);
 	padding: 12px 20px;
 	font-size: 20px;
 	border-radius: 24px;
-	transition: .5s;
+	transition: 0.5s;
 	width: 100%;
-	&:focus{
-		color: #fff;
-		border: 1px solid #fff;
+	&_transparent {
+		background-color: transparent;
+		border: 1px solid var(--grey);
+		&:focus {
+			color: #fff;
+			border: 1px solid #fff;
+		}
+		&.error {
+			border: 1px solid rgba(230, 26, 26, 1);
+		}
 	}
-	&.error{
-		border: 1px solid rgba(230, 26, 26, 1);
+	&_white{
+		background-color: #fff;
+		border: 1px solid var(--lightBlue);
+		&:focus {
+			color: #000;
+			border: 1px solid #000;
+		}
+		&.error {
+			color: rgba(230, 26, 26, 1);
+			border: 1px solid rgba(230, 26, 26, 1);
+		}
 	}
 }
-.input-container{
+.input-container {
 	position: relative;
-	svg{
-		
+	.btn-remove-text {
 		position: absolute;
 		top: 18px;
 		right: 18px;
 		cursor: pointer;
 		opacity: 0;
 		visibility: hidden;
-		transition: .5s;
+		transition: 0.5s;
+		height: 14px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
-	.input-custom.error + svg{
+	.input-custom.error + .btn-remove-text {
 		opacity: 1;
 		visibility: visible;
 	}
+}
+.textarea-custom{
+	border-radius: 24px;
+	padding: 12px 20px;
+	width: 100%;
+	height: 100px;
+	 resize: none;
+	 font-size: 20px;
+	 font-weight: 500;
+	 font-family: 'Lato', sans-serif;
+	&_white{
+		background-color: #fff;
+		border: 1px solid var(--lightBlue);
+		color: var(--lightBlue);
+	}
+}
+.btn-remove-text{
+    cursor: pointer;
 }
