--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,4 +1,10 @@
 .header {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   z-index: 100;
+   background-color: #fff;
     .container{
       padding: 16px 20px;
     }
@@ -49,4 +55,14 @@
 		&__btn {
 		}
     
+}
+
+.map__marker{
+   position: relative;
+   img{
+      width: 90px;
+      position: absolute;
+      transform: translate(-50%, -100%);
+      
+   }
 }
