--- a/src/scss/components/blocks/_reviews.scss
+++ b/src/scss/components/blocks/_reviews.scss
@@ -66,6 +66,7 @@
 }
 
 &__card-head-svg {
+    cursor: pointer;
 }
 
 &__card-body {
@@ -96,15 +97,18 @@
     justify-content: center;
     gap: 12px;
 }
-.btn-prev {
+.reviews-btn {
+    cursor: pointer;
 }
 .reviews-swiper-pagination {
     background-color: var(--grey);
-    padding: 16px;
+    padding: 12px 16px;
     border-radius: 24px;
     width: max-content !important;
     position: static !important;
+    height: 48px;
     .swiper-pagination-bullet{
+        cursor: pointer;
         width: 12px;
         height: 12px;
         background-color: transparent !important;
@@ -116,7 +120,8 @@
 }
 .swiper-pagination {
 }
-.btn-next {
+.reviews-btn {
+    cursor: pointer;
 }
 .reviews-card-img{
     position: absolute;
@@ -133,6 +138,8 @@
     background-color: var(--blue);
     transition: .5s;
     border-radius: 50%;
+    width: 48px;
+    height: 48px;
     &.swiper-button-disabled{
         
         background-color: rgba(21, 42, 96, 0.6);
