mobil main slider

--- a/src/html/components/_services.html
+++ b/src/html/components/_services.html
@@ -11,7 +11,7 @@
 							<p class="services__card-title">
 								Обжалование решений государственных органов
 							</p>
-							<div class="services__card-btn btn btn_transparent">
+							<div class="services__card-btn btn btn_transparent open-popup" id="modal-2">
 								Подробнее
 							</div>
 						</div>
@@ -21,7 +21,7 @@
 							<p class="services__card-title">
 								Обжалование решений государственных органов
 							</p>
-							<div class="services__card-btn btn btn_transparent">
+							<div class="services__card-btn btn btn_transparent open-popup" id="modal-2">
 								Подробнее
 							</div>
 						</div>
@@ -31,7 +31,7 @@
 							<p class="services__card-title">
 								Обжалование решений государственных органов
 							</p>
-							<div class="services__card-btn btn btn_transparent">
+							<div class="services__card-btn btn btn_transparent open-popup" id="modal-2">
 								Подробнее
 							</div>
 						</div>
@@ -41,7 +41,7 @@
 							<p class="services__card-title">
 								Обжалование решений государственных органов
 							</p>
-							<div class="services__card-btn btn btn_transparent">
+							<div class="services__card-btn btn btn_transparent open-popup" id="modal-2">
 								Подробнее
 							</div>
 						</div>
@@ -51,7 +51,7 @@
 							<p class="services__card-title">
 								Обжалование решений государственных органов
 							</p>
-							<div class="services__card-btn btn btn_transparent">
+							<div class="services__card-btn btn btn_transparent open-popup" id="modal-2">
 								Подробнее
 							</div>
 						</div>
@@ -61,7 +61,7 @@
 							<p class="services__card-title">
 								Обжалование решений государственных органов
 							</p>
-							<div class="services__card-btn btn btn_transparent">
+							<div class="services__card-btn btn btn_transparent open-popup" id="modal-2">
 								Подробнее
 							</div>
 						</div>
