--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import 'components/blocks/reviews';
 @import 'components/blocks/callback';
 @import 'components/blocks/services';
+@import 'components/blocks/popup';
 
 @import 'pages/index.scss';
 
