--- a/src/scss/base/basic.scss
+++ b/src/scss/base/basic.scss
@@ -17,6 +17,13 @@ html {
 	font-size: 20px;
 	color: var(--lightBlue);
 	background-color: #fff;
+	@media (max-width: 991px) {
+		font-size: 16px;
+	}
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .wrapper {
@@ -31,14 +38,20 @@ main {
 	display: flex;
 	flex-direction: column;
 	gap: 72px;
+	@media (max-width:1280px) {
+		padding: 80px 0 44px 0;
+	}
 }
 
 .container {
-	max-width: 1560px;
-	padding: 0 20px;
+	max-width: 1600px;
+	padding: 0 40px;
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
+	@media (max-width:560px) {
+		padding: 0 20px;
+	}
 }
 
 h1 {
@@ -49,6 +62,12 @@ h1 {
 	span {
 		color: var(--lightBlue);
 	}
+	@media (max-width:1280px) {
+		font-size: 32px;
+	}
+	@media (max-width:560px) {
+		font-size: 28px;
+	}
 }
 h2 {
 	font-size: 48px;
@@ -57,6 +76,12 @@ h2 {
 	font-weight: 700;
 	span {
 		color: var(--lightBlue);
+	}
+	@media (max-width:1280px) {
+		font-size: 32px;
+	}
+	@media (max-width:560px) {
+		font-size: 28px;
 	}
 }
 h3 {
