--- a/src/scss/components/UI/_btn.scss
+++ b/src/scss/components/UI/_btn.scss
@@ -16,6 +16,7 @@
         &:hover{
             background-color:#fff;
             color: var(--blue);
+            border: 1px solid var(--blue);
         }
     }
     &_white{
