--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,68 +1,225 @@
 .header {
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   z-index: 100;
-   background-color: #fff;
-    .container{
-      padding: 16px 20px;
-    }
-    &-wrapper{
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-      align-items: center;
-      gap: 20px;
-    }
-		&__logo {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 25;
+	background-color: #fff;
+	.container {
+		padding: 16px 40px;
+		@media (max-width: 1380px) {
+			padding: 8px 40px;
 		}
+		@media (max-width: 560px) {
+			padding: 8px 20px;
+		}
+	}
+	&-wrapper {
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
+		align-items: center;
+		gap: 20px;
+	}
+	&__logo {
+		@media (max-width: 1380px) {
+			max-height: 50px;
+			img {
+				max-height: 50px;
+				height: 100%;
+				width: auto;
+			}
+		}
+	}
 
-		&__links {
-      display: flex;
-      gap: 32px;
+	&__links {
+		display: flex;
+		gap: 32px;
+		@media (max-width: 1400px) {
+			gap: 12px;
 		}
+		@media (max-width: 1280px) {
+			display: none;
+		}
+	}
 
-		&__link {
-		}
+	&__link {
+	}
 
-		&__info {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      span{
-        content: '';
-        width: 1px;
-        height: 72px;
-        background-color: var(--blue);
-      }
+	&__info {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 20px;
+		span {
+			content: '';
+			width: 1px;
+			height: 72px;
+			background-color: var(--blue);
 		}
+		@media (max-width: 1380px) {
+			span {
+				height: 64px;
+			}
+		}
+		@media (max-width: 560px) {
+			span {
+				display: none;
+			}
+		}
+	}
 
-		&__contacts {
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
+	&__contacts {
+		display: flex;
+		flex-direction: column;
+		gap: 4px;
+		@media (max-width: 560px) {
+			display: none;
 		}
+	}
 
-		&__link-phone {
-		}
+	&__link-phone {
+	}
 
-		&__btn-container {
-      height: max-content;
+	&__btn-container {
+		height: max-content;
+		.header__burger {
+			display: none;
 		}
+		.header__link-phone-mobil {
+			display: none;
+		}
+		@media (max-width: 1280px) {
+			.btn {
+				display: none;
+			}
+			.header__burger {
+				display: block;
+				svg {
+					transition: 0.5s;
+					&:first-child {
+						opacity: 1;
+						visibility: visible;
+						position: static;
+					}
+					&:last-child {
+						opacity: 0;
+						visibility: hidden;
+						position: absolute;
+                  left: 0;
+					}
+				}
+				&.active {
+					svg {
+						&:first-child {
+							opacity: 0;
+							visibility: hidden;
+							position: absolute;
+						}
+						&:last-child {
+							opacity: 1;
+							visibility: visible;
+							position: static;
+						}
+					}
+				}
+			}
+			.header__link-phone-mobil {
+				display: block;
+			}
+			display: flex;
+			gap: 16px;
+		}
+	}
 
-		&__btn {
-		}
-    
+	&__btn {
+	}
 }
 
-.map__marker{
-   position: relative;
-   img{
-      width: 90px;
-      position: absolute;
-      transform: translate(-50%, -100%);
-      
-   }
+.map__marker {
+	position: relative;
+	img {
+		width: 90px;
+		position: absolute;
+		transform: translate(-50%, -100%);
+	}
+}
+.header__menu-mobil {
+	position: fixed;
+	z-index: 20;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	background-color: rgba(21, 42, 96, 0.9);
+	visibility: hidden;
+	transition: 0.5s;
+	top: 0;
+	.header__menu-frame {
+		background-color: #fff;
+		border-radius: 0px 0px 24px 24px;
+		transition: 0.5s;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		padding: 24px 40px;
+		gap: 24px;
+      transform: translate(0, -100%);
+		span {
+			content: '';
+			width: 100%;
+			height: 1px;
+			background: var(--blue);
+		}
+		.header__links {
+			display: flex;
+			flex-direction: column;
+			gap: 8px;
+			a {
+				font-size: 28px;
+				text-align: center;
+			}
+		}
+		.header__contacts {
+			display: flex;
+			justify-content: center;
+			flex-direction: row;
+			gap: 16px;
+		}
+	}
+	&.active {
+		opacity: 1;
+		visibility: visible;
+		.header__menu-frame {
+			transform: translate(0, 80px);
+		}
+	}
+}
+.container-arrow-btn{
+	position: fixed;
+	z-index: 20;
+	bottom: 100px;
+	
+	width: 100%;
+	.container{
+		display: flex;
+		justify-content: flex-end;
+	}
+	svg{
+		rect{
+transition: .5s;
+		}
+		path{
+			transition: .5s;
+		}
+		&:hover{
+			rect{
+				fill: var(--blue);
+				stroke: #fff;
+				
+			}
+			path{
+				stroke: #fff;
+			}
+		}
+	}
 }
