--- a/src/scss/components/blocks/_mainSlider.scss
+++ b/src/scss/components/blocks/_mainSlider.scss
@@ -1,26 +1,12 @@
-.container {
-}
-.main-wrapper {
-}
-.main-slider {
-}
-.swiper {
-}
 .main-swiper {
     width: 100%;
-    
-}
-.swiper-wrapper {
-}
-.swiper-slide {
-}
-.swiper-pagination {
-}
-.slide-title {
-}
-.title {
-}
+    .swiper-slide {
+        @media (max-width:1280px) {
+            height: calc(100vh - 80px);
 
+        }
+}
+}
 .slide__info{
     max-width: 730px;
     width: 100%;
@@ -28,10 +14,27 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 0 0 72px 0;
+    gap: 20px;
     &-head{
         display: flex;
         flex-direction: column;
         gap: 32px;
+    }
+    @media (max-width:1280px) {
+        max-width: 100%;
+        position: relative;
+        z-index: 1;
+        padding: 60px 40px 54px 40px;
+        height: calc(100vh - 80px);
+        .title{
+            color: #fff;
+            span{
+                color: #fff;
+            }
+        }
+        &-head{
+            gap: 24px;
+        }
     }
 }
 .main-slide{
@@ -47,6 +50,19 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
+    @media (max-width:1280px) {
+        gap: 16px;
+    }
+    @media (max-width:560px) {
+        display: flex;
+        overflow-y: scroll;
+        position: static;
+        bottom: 48px;
+        z-index: 10;
+        &::-webkit-scrollbar{
+            width: 0;
+        }
+    }
 }
 
 &__box {
@@ -61,9 +77,20 @@
         width: 1px;
         background-color: var(--blue);
     }
+    @media (max-width:560px) {
+        min-width: 273px;
+        position: relative;
+        z-index: 6;
+    }
 }
 
 &__box-img {
+    @media (max-width:1280px) {
+        svg{
+            max-width: 48px;
+            max-height: 48px;
+        }
+    }
 }
 
 &__box-info {
@@ -74,6 +101,9 @@
     font-weight: 700;
     margin: 0 0 4px 0;
     color: var(--blue);
+    @media (max-width:1280px) {
+        font-size: 20px;
+    }
 }
 
 &__box-text {
@@ -85,8 +115,19 @@
 .container.main-con{
     max-width: calc(100vw - (100vw - 1560px)/2 - 20px);
     width: 100%;
+    padding: 0 0 0 40px;
     margin-left: calc((100vw - 1560px)/2);
     margin-right: 0;
+    @media (max-width: 1600px) {
+        max-width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0 0 0 40px;
+    }
+    @media (max-width:1280px) {
+        padding: 0 0 0 0;
+        height: calc(100vh - 80px);
+    }
 }
 .main-swiper-pagination{
     max-width: 730px;
@@ -106,8 +147,24 @@
     .swiper-pagination-bullet-active{
         background-color: var(--blue);
     }
+    @media (max-width: 1280px){
+        z-index: 1;
+        max-width: 100%;
+        padding: 0 40px;
+    }
 }
 .slide__img{
     position: relative;
     z-index: 1;
+    @media (max-width: 1280px) {
+        position: absolute;
+        height: 100%;
+        z-index: 0;
+        overflow: hidden;
+        img{
+            width: auto;
+            height: 100%;
+            margin: 0 0 0 -60px;
+        }
+    }
 }
