--- a/src/html/components/_roadMap.html
+++ b/src/html/components/_roadMap.html
@@ -94,6 +94,7 @@
 						значительного времени для анализа конкретной ситуации Клиента и
 						разработки индивидуального решения.
 					</p>
+					<div class="btn btn_transparent-white active-text">Подробнее</div>
 				</div>
 			</div>
 		</div>
