--- a/src/scss/components/blocks/_services.scss
+++ b/src/scss/components/blocks/_services.scss
@@ -5,6 +5,12 @@
     flex-direction: column;
     gap: 40px;
     width: 100%;
+    @media (max-width: 1280px) {
+        gap: 28px;
+    }
+    @media (max-width: 560px) {
+        gap: 24px;
+    }
 }
 
 &__card {
