--- a/src/scss/base/basic.scss
+++ b/src/scss/base/basic.scss
@@ -17,9 +17,10 @@ html {
 	font-size: 20px;
 	color: var(--lightBlue);
 	background-color: #fff;
-	@media (max-width: 991px) {
+	@media (max-width: 1280px) {
 		font-size: 16px;
 	}
+	
 }
 
 html {
@@ -39,7 +40,7 @@ main {
 	flex-direction: column;
 	gap: 72px;
 	@media (max-width:1280px) {
-		padding: 80px 0 44px 0;
+		padding: 80px 0 0 0;
 	}
 }
 
