--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -5,7 +5,9 @@ padding: 60px 0 40px 0;
 position: relative;
 &__wrapper {
 }
-
+@media (max-width:1280px) {
+    padding: 32px 0 24px 0;
+}
 &__row {
     display: flex;
     justify-content: space-between;
@@ -13,12 +15,31 @@ position: relative;
     &:last-child{
         padding: 60px 0 0 0;
     }
+    @media (max-width:1280px) {
+        flex-direction: column;
+        &:last-child{
+            
+            display: flex;
+            flex-direction: row;
+        }
+    }
+    @media (max-width:650px) {
+        flex-direction: column;
+        &:last-child{
+            padding: 48px 0 0 0;
+            display: flex;
+            flex-direction: column;
+        }
+    }
 }
 
 
 &__title {
     color: #fff;
     margin: 0 0 40px 0;
+    @media (max-width:1280px) {
+        margin: 0 0 28px 0;
+    }
 }
 
 &__contact-frame {
@@ -38,10 +59,43 @@ position: relative;
             color: var(--blue);
         }
     }
+    @media (max-width:1280px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        max-width: 100%;
+        padding: 24px;
+        gap: 20px;
+        p{
+            color: var(--lightBlue);
+            margin: 0 0 0 0;
+            &:last-child{
+                margin: 0 0 0 0;
+            }}
+            .footer__contact-img{
+                max-height: 277px;
+                overflow: hidden;
+                border-radius: 16px;
+            }
+    }
+    @media (max-width:650px) {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        padding: 20px;
+        .footer__contact-img{
+            margin: 0 0 12px 0;
+        }
+    }
 }
 
 &__contact-img {
     margin: 0 0 20px 0;
+    @media (max-width:1280px) {
+        grid-row-start: 2;
+        grid-row-end: 2;
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
 }
 
 &__map {
@@ -53,12 +107,42 @@ position: relative;
         width: 100%;
         height: 100%;
     }
+    @media (max-width:1280px) {
+        height: 450px;
+    }
+    @media (max-width:650px) {
+        height: 233px;
+    }
 }
 
 &__menu-wrapper {
     display: flex;
     gap: 130px;
     align-items: flex-end;
+    @media (max-width:1280px) {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 24px;
+        .footer__links{
+            align-items: flex-start;
+            flex-direction: row;
+        }
+        .footer__politic{
+            font-size: 18px;
+        }
+    }
+    @media (max-width:650px) {
+        flex-direction: column;
+        align-items: center;
+        gap: 24px;
+        .footer__links{
+            align-items: center;
+            flex-direction: row;
+        }
+        .footer__politic{
+            font-size: 16px;
+        }
+    }
 }
 
 &__logo-wrapper {
@@ -70,6 +154,11 @@ position: relative;
         font-size: 24px;
         color: #fff;
 
+    }
+    @media (max-width:1280px) {
+        .footer__logo{
+            max-width: 230px;
+        }
     }
 }
 
@@ -87,16 +176,36 @@ position: relative;
 
 &__link {
     color: #fff;
+    @media (max-width:1280px) {
+        font-size: 18px;
+    }
+    @media (max-width:650px) {
+        font-size: 18px;
+    }
 }
 
 &__address {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    @media (max-width:1280px) {
+        justify-content: flex-start;
+        align-items: center;
+        .footer__btn{
+            order: 3;
+        }
+        .footer__link-phone{
+            font-size: 28px;
+        }
+        p{
+            margin: 0 0 24px 0;
+        }
+    }
 }
 
 &__btn {
     margin: 0 0 20px;
+    
 }
 
 &__link-phone {
