--- a/src/scss/components/blocks/_popup.scss
+++ b/src/scss/components/blocks/_popup.scss
@@ -22,11 +22,17 @@
     visibility: hidden;
     position: absolute;
     display: flex;
+    flex-direction: column;
     gap: 20px;
+    align-items: flex-end;
+    padding: 20px;
     &.active{
         opacity: 1;
         visibility: visible;
         position: static;
+    }
+    .modal-close{
+        order: -1;
     }
 }
 .modal-problem{
@@ -36,6 +42,16 @@
     .btn-container{
         margin: 0 0 20px 0;
     }
+    @media (max-width:1280px) {
+        .callback__form-inputs{
+            display: flex;
+        }
+        .callback__form{
+            max-width: 490px;
+        }
+        
+    }
+    
 }
 .modal-close{
     cursor: pointer;
@@ -61,6 +77,27 @@
         color: rgba(21, 42, 96, 1);
         font-size: 24px;
 }
+@media (max-width:1280px) {
+    gap: 24px;
+    padding: 24px;
+    .title{
+        font-size: 32px;
+    }
+}
+@media (max-width:560px) {
+    gap: 20px;
+    padding: 20px;
+    .title{
+        font-size: 24px;
+    }
+    ul{
+        gap: 12px;
+    }
+    li{
+        font-size: 14px;
+        line-height: 16px;
+    }
+}
 }
 .modal-frame{
     max-width: 380px;
@@ -70,6 +107,26 @@
         background-color: var(--grey);
     border-radius: 24px;
     padding: 48px;
+    @media (max-width:1280px) {
+        max-width: 320px;
+        padding: 24px;
+        p{
+            margin: 0 0 32px 0;
+        }
+        .modal-frame__img{
+            margin: 0 auto 24px auto;
+        }
+    }
+    @media (max-width:560px) {
+        max-width: 320px;
+        padding: 20px;
+        p{
+            margin: 0 0 28px 0;
+        }
+        .modal-frame__img{
+            margin: 0 auto 20px auto;
+        }
+    }
     .modal-frame__img{
         display: flex;
         justify-content: center;
